fix(results): use asp-items on select to avoid Razor C# in option attribute area

--- a/DobraAnketaUpdate/GlasAnketaForma/GlasAnketa/Views/Results/ViewResults.cshtml
+++ b/DobraAnketaUpdate/GlasAnketaForma/GlasAnketa/Views/Results/ViewResults.cshtml
@@ -38,15 +38,7 @@
                     <div class="card-body">
                         <div class="form-group">
                             <label>Select Questionnaire Form:</label>
-                            <select class="form-control" id="formSelector">
-                                @if (ViewBag.Forms != null)
-                                {
-                                    foreach (var item in (Microsoft.AspNetCore.Mvc.Rendering.SelectList)ViewBag.Forms)
-                                    {
-                                        <option value="@item.Value" @(item.Selected ? "selected" : null)>@item.Text</option>
-                                    }
-                                }
-                            </select>
+                            <select class="form-control" id="formSelector" asp-items="ViewBag.Forms"></select>
                         </div>
                         <button class="btn btn-primary" onclick="loadResults()">Load Results</button>
                     </div>
